WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273888
com.apple.WebKit.WebContent.Development crashed at com.apple.WebCore: void WTF::HashTable<int, WTF::KeyValuePair<int, WebCore::Color>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<int, WebCore::Color>>, WTF::DefaultHas…
https://bugs.webkit.org/show_bug.cgi?id=273888
Summary
com.apple.WebKit.WebContent.Development crashed at com.apple.WebCore: void W...
Vitor Roriz
Reported
2024-05-08 11:37:01 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-05-08 11:37:13 PDT
<
rdar://problem/127754676
>
Darin Adler
Comment 2
2024-05-09 04:17:12 PDT
rdar://127714701
Matthieu Dubet
Comment 3
2024-05-09 14:53:59 PDT
Pull request:
https://github.com/apple/WebKit/pull/1272
Matthieu Dubet
Comment 4
2024-05-10 11:12:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28398
EWS
Comment 5
2024-05-10 19:14:01 PDT
Committed
278645@main
(da248b2c463c): <
https://commits.webkit.org/278645@main
> Reviewed commits have been landed. Closing PR #28398 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug