[CSS] @font-palette-values override-colors accepts only absolute color https://bugs.webkit.org/show_bug.cgi?id=273888 rdar://127714701

Reviewed by Tim Nguyen.

"The specified <color> must be an absolute color."

https://drafts.csswg.org/css-fonts/#override-color

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/parsing/font-palette-values-invalid-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/parsing/font-palette-values-valid-expected.txt:
* Source/WebCore/css/CSSPrimitiveValue.cpp:
(WebCore::CSSPrimitiveValue::absoluteColor const):
* Source/WebCore/css/CSSPrimitiveValue.h:
* Source/WebCore/css/parser/CSSParserImpl.cpp:
(WebCore::CSSParserImpl::consumeFontPaletteValuesRule):

Canonical link: https://commits.webkit.org/278645@main